<resources>
    <string name="app_name">图书管理系统</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="username">用户名:%1$s</string>
    <string name="nickname">姓名:%1$s</string>
    <string name="gender">性别:%1$s</string>
    <string name="role">角色:%1$s</string>
    <string name="phone">电话:%1$s</string>
    <string name="book_name">书名:%1$s</string>
    <string name="author_name">作者:%1$s</string>
    <string name="press_name">出版社:%1$s</string>
    <string name="ISBN">ISBN:%1$s</string>
    <string name="count">数量:%1$s</string>
    <string name="sur">剩余:%1$s</string>
    <string name="notice">公告：%1$s</string>
    <string name="message">留言：%1$s</string>
    <string name="reply">回复：%1$s</string>
</resources>
